--- a/mypy.ini
+++ b/mypy.ini
@@ -12,6 +12,9 @@ disallow_untyped_defs = False
 [mypy-irctest.client_tests.*]
 disallow_untyped_defs = False
 
+[mypy-irctest.self_tests.*]
+disallow_untyped_defs = False
+
 [mypy-defusedxml.*]
 ignore_missing_imports = True
 
