--- a/pytest.ini
+++ b/pytest.ini
@@ -27,6 +27,7 @@ markers =
     extended-monitor
     labeled-response
     message-tags
+    metadata-2
     draft/multiline
     multi-prefix
     server-time
