inspircd: Use upstream mainloop hack when available

--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -149,8 +149,12 @@ jobs:
     - name: Build InspIRCd
       run: |
         cd $GITHUB_WORKSPACE/inspircd/
-        patch src/inspircd.cpp < $GITHUB_WORKSPACE/patches/inspircd_mainloop.patch
-        ./configure --prefix=$HOME/.local/inspircd --development
+
+        # Insp3 <= 3.16.0 and Insp4 <= 4.0.0a21 don't support -DINSPIRCD_UNLIMITED_MAINLOOP
+        patch src/inspircd.cpp < $GITHUB_WORKSPACE/patches/inspircd_mainloop.patch || true
+
+        CXXFLAGS=-DINSPIRCD_UNLIMITED_MAINLOOP ./configure --prefix=$HOME/.local/inspircd --development
+
         make -j 4
         make install
     - name: Make artefact tarball
