--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -153,9 +153,9 @@ jobs:
         # Insp3 <= 3.16.0 and Insp4 <= 4.0.0a21 don't support -DINSPIRCD_UNLIMITED_MAINLOOP
         patch src/inspircd.cpp < $GITHUB_WORKSPACE/patches/inspircd_mainloop.patch || true
 
-        CXXFLAGS=-DINSPIRCD_UNLIMITED_MAINLOOP ./configure --prefix=$HOME/.local/inspircd --development
+        ./configure --prefix=$HOME/.local/inspircd --development
 
-        make -j 4
+        CXXFLAGS=-DINSPIRCD_UNLIMITED_MAINLOOP make -j 4
         make install
     - name: Make artefact tarball
       run: cd ~; tar -czf artefacts-inspircd.tar.gz .local/ go/
