Add tests for draft/message-redaction

--- a/pytest.ini
+++ b/pytest.ini
@@ -26,6 +26,7 @@ markers =
     extended-join
     extended-monitor
     labeled-response
+    draft/message-redaction
     message-tags
     draft/multiline
     multi-prefix
