--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -1155,17 +1155,17 @@ jobs:
         path: pytest.xml
   test-thelounge:
     needs: []
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python 3.7
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: 3.7
     - name: Install dependencies
-      run: yarn global add thelounge@4.3.0
-    - name: Install Atheme
-      run: sudo apt-get install atheme-services
+      run: yarn global add thelounge@4.4.0
+    - name: Install system dependencies
+      run: sudo apt-get install atheme-services faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1173,11 +1173,12 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
         thelounge
+      timeout-minutes: 30
     - if: always()
       name: Publish results
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
-        name: pytest results thelounge (stable)
+        name: pytest-results_thelounge_stable
         path: pytest.xml
   test-unrealircd:
     needs:
