--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -400,6 +400,7 @@ jobs:
     - test-plexus4
     - test-solanum
     - test-sopel
+    - test-thelounge
     - test-unrealircd
     - test-unrealircd-5
     - test-unrealircd-anope
@@ -993,6 +994,33 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: pytest-results_sopel_devel
+        path: pytest.xml
+  test-thelounge:
+    needs: []
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.7
+    - name: Install dependencies
+      run: yarn global add https://github.com/thelounge/thelounge.git
+    - name: Install system dependencies
+      run: sudo apt-get install atheme-services faketime
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest pytest-xdist -r requirements.txt
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+        thelounge
+      timeout-minutes: 30
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v3
+      with:
+        name: pytest-results_thelounge_devel
         path: pytest.xml
   test-unrealircd:
     needs:
