--- a/workflows.yml
+++ b/workflows.yml
@@ -379,6 +379,21 @@ software:
                   run: pip install git+https://github.com/sopel-irc/sopel.git
             devel_release: null
 
+    thelounge:
+        name: TheLounge
+        separate_build_job: false
+        install_steps:
+            stable:
+                - name: Install dependencies
+                  run: yarn global add thelounge@4.4.0
+            release:
+                - name: Install dependencies
+                  run: yarn global add thelounge
+            devel:
+                - name: Install dependencies
+                  run: yarn global add https://github.com/thelounge/thelounge.git
+            devel_release: null
+
 tests:
     bahamut:
         software: [bahamut]
@@ -457,3 +472,6 @@ tests:
 
     sopel:
         software: [sopel]
+
+    thelounge:
+        software: [thelounge]
