--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -1162,8 +1162,18 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: 3.7
-    - name: Install dependencies
-      run: yarn global add thelounge@4.4.0
+    - name: Checkout TheLounge
+      uses: actions/checkout@v3
+      with:
+        path: thelounge
+        ref: v4.4.0
+        repository: thelounge/thelounge
+    - name: Build TheLounge
+      run: |
+        cd $GITHUB_WORKSPACE/thelounge
+        yarn install
+        NODE_ENV=production yarn build
+        ln -s $(pwd)/index.js ~/.local/bin/thelounge
     - name: Install system dependencies
       run: sudo apt-get install atheme-services faketime
     - name: Install irctest dependencies
