--- a/workflows.yml
+++ b/workflows.yml
@@ -393,6 +393,7 @@ software:
             cd $GITHUB_WORKSPACE/thelounge
             yarn install
             NODE_ENV=production yarn build
+            mkdir -p ~/.local/bin/
             ln -s $(pwd)/index.js ~/.local/bin/thelounge
 
 tests:
