--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -72,6 +72,7 @@ jobs:
         cd $GITHUB_WORKSPACE/Bahamut/
         patch src/s_user.c < $GITHUB_WORKSPACE/patches/bahamut_localhost.patch
         patch src/s_bsd.c < $GITHUB_WORKSPACE/patches/bahamut_mainloop.patch
+        patch -p1 < $GITHUB_WORKSPACE/patches/bahamut_ubuntu22.patch
         echo "#undef THROTTLE_ENABLE" >> include/config.h
         libtoolize --force
         aclocal
