Add a patch to fix Charybdis on Ubuntu 22.04.

--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -120,6 +120,7 @@ jobs:
     - name: Build Charybdis
       run: |
         cd $GITHUB_WORKSPACE/charybdis/
+        patch -p1 < $GITHUB_WORKSPACE/patches/charybdis_ubuntu22.patch
         ./autogen.sh
         ./configure --prefix=$HOME/.local/
         make -j 4
