--- a/workflows.yml
+++ b/workflows.yml
@@ -107,7 +107,10 @@ software:
             cd $GITHUB_WORKSPACE/Bahamut/
             patch src/s_user.c < $GITHUB_WORKSPACE/patches/bahamut_localhost.patch
             patch src/s_bsd.c < $GITHUB_WORKSPACE/patches/bahamut_mainloop.patch
-            patch -p1 < $GITHUB_WORKSPACE/patches/bahamut_ubuntu22.patch
+
+            # <= v2.2.2
+            patch -p1 < $GITHUB_WORKSPACE/patches/bahamut_ubuntu22.patch || true
+
             echo "#undef THROTTLE_ENABLE" >> include/config.h
             libtoolize --force
             aclocal
