Configure Unreal with --with-system-argon2
Our Github Workflow builds and runs on different machines, causing argon2
to be built sometimes with some CPU instructions that the machine running
it does not support.

--- a/data/unreal/config.settings
+++ b/data/unreal/config.settings
@@ -19,6 +19,10 @@ SHOWLISTMODES="1"
 NOOPEROVERRIDE=""
 OPEROVERRIDEVERIFY=""
 GENCERTIFICATE="1"
-EXTRAPARA=""
+
+# Use system argon to avoid getting SIGILLed if the build machine has a more recent
+# CPU than the one running the tests.
+EXTRAPARA="--with-system-argon2"
+
 ADVANCED=""
 
