working-directory is not setable on actions

--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -471,7 +471,9 @@ jobs:
         repository: Libera-Chat/sable
     - name: Install rust toolchain
       uses: actions-rs/toolchain@v1
-      working-directory: sable/
+      with:
+        override: true
+        toolchain: nightly
     - run: rustc --version
     - name: Build Sable
       run: |
